--- a/package.json
+++ b/package.json
@@ -27,5 +27,9 @@
     "tslib": "^2.3.1",
     "typescript": "^4.4.3"
   },
-  "type": "module"
+  "type": "module",
+  "dependencies": {
+    "date-fns": "^2.28.0",
+    "svelte-carousel": "^1.0.17-rc4"
+  }
 }
