--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
 		"date-fns": "^2.28.0",
 		"dotenv": "^10.0.0",
 		"express": "^4.17.1",
+		"googleapis": "^100.0.0",
 		"mysql2": "^2.3.3",
 		"nanoid": "^3.1.25",
 		"node-schedule": "^2.1.0"
