--- a/client/package.json
+++ b/client/package.json
@@ -30,6 +30,7 @@
   "type": "module",
   "dependencies": {
     "date-fns": "^2.28.0",
-    "svelte-carousel": "^1.0.17-rc4"
+    "svelte-carousel": "^1.0.17-rc4",
+    "svelte-forms-lib": "^2.0.1"
   }
 }
