--- a/client/package.json
+++ b/client/package.json
@@ -29,8 +29,8 @@
   },
   "type": "module",
   "dependencies": {
+    "@splidejs/svelte-splide": "^0.2.1",
     "date-fns": "^2.28.0",
-    "svelte-carousel": "^1.0.17-rc4",
     "svelte-forms-lib": "^2.0.1"
   }
 }
