--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -23,9 +23,10 @@
 		"allowJs": true,
 		"checkJs": true,
 		"paths": {
-			"$lib": ["client/src/lib"],
-			"$lib/*": ["client/src/lib/*"]
+			"$lib": ["src/lib"],
+			"$lib/*": ["src/lib/*"]
 		}
 	},
-	"include": ["client/src/**/*.d.ts", "client/src/**/*.js", "client/src/**/*.ts", "client/src/**/*.svelte"]
+	"include": ["src/**/*.d.ts", "src/**/*.js", "src/**/*.ts", "src/**/*.svelte"],
+	"extends": "./.svelte-kit/tsconfig.json"
 }
