--- a/server/package.json
+++ b/server/package.json
@@ -6,12 +6,14 @@
 	"scripts": {
 		"start": "node dist/server.js",
 		"dev": "nodemon -L src/server.ts",
+		"scraper": "nodemon src/scraper.ts",
 		"build": "tsc -p ."
 	},
 	"keywords": [],
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
+		"cheerio": "^1.0.0-rc.10",
 		"cors": "^2.8.5",
 		"date-fns": "^2.28.0",
 		"dotenv": "^10.0.0",
@@ -19,14 +21,17 @@
 		"googleapis": "^100.0.0",
 		"mysql2": "^2.3.3",
 		"nanoid": "^3.1.25",
-		"node-schedule": "^2.1.0"
+		"node-schedule": "^2.1.0",
+		"puppeteer": "^13.6.0"
 	},
 	"devDependencies": {
 		"@types/bcrypt": "^5.0.0",
+		"@types/cheerio": "^0.22.31",
 		"@types/cors": "^2.8.12",
 		"@types/express": "^4.17.13",
 		"@types/node": "^16.9.6",
 		"@types/node-schedule": "^1.3.2",
+		"@types/puppeteer": "^5.4.5",
 		"nodemon": "^2.0.12",
 		"ts-node": "^10.2.1",
 		"typescript": "^4.4.3",
