--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
+		"@sendgrid/mail": "^7.6.2",
 		"cheerio": "^1.0.0-rc.10",
 		"cors": "^2.8.5",
 		"date-fns": "^2.28.0",
