--- a/client/package.json
+++ b/client/package.json
@@ -24,12 +24,15 @@
   },
   "dependencies": {
     "@splidejs/svelte-splide": "^0.2.1",
+    "@strapi/provider-email-sendgrid": "^4.3.0",
     "autosuggest-highlight": "^3.2.1",
     "axios": "^0.26.1",
     "broadcast-channel": "^4.10.0",
     "date-fns": "^2.28.0",
-    "googleapis": "^100.0.0",
+    "nanoid": "^3.3.4",
+    "pg-connection-string": "^2.5.0",
     "svelte-imask": "^1.2.0",
+    "svelte-modals": "^1.1.0",
     "svelte-navigator": "^3.1.5",
     "yup": "^0.32.11"
   }
